First steps to site flow, coursedetails displayed where teacher overview is, width overflow on coursedetails fixed

--- a/src/App.css
+++ b/src/App.css
@@ -44,14 +44,14 @@
 
 .container1 {
   width: 100%;
-  height: 40%;
+  height: 50%;
 
   margin: 0 30px 0 30px;
 }
 
 .container2 {
   width: 100%;
-  height: 60%;
+  height: 50%;
 
   margin: 0 30px 0 30px;
 }
