--- a/src/components/CourseDetails/CourseDetails.css
+++ b/src/components/CourseDetails/CourseDetails.css
@@ -23,7 +23,7 @@
 }
 
 .detailsCol {
-    width: 100%;
+    width: 75%;
 }
 
 .detailsCol.exit {
